--- a/Motostore/1-Layout_html/Store-main.html
+++ b/Motostore/1-Layout_html/Store-main.html
@@ -14,8 +14,18 @@
             <font class="logo_text">MOTORSTORE</font>
             <a href="Empty_contact.html"><img class="call" src="../Motostore_res/Call_def.png"></a>
         </div>
-               <img src="../Motostore_res/MT-03.png" href = ""></td>
-          
+        <table align="center">
+            <tr>
+                <td height = "800px" align="center"><a href="MT-03_lemma.html"><img class="index_link" src="../Motostore_res/MT-03.png"></a></td>
+            </tr>
+            <tr>
+                <td height = "800px" align="center"><a href="MT-09_lemma.html"><img class="index_link" src="../Motostore_res/MT-09.png"></a></td>
+            </tr>
+            <tr>
+                <td height = "800px" align="center"><a href="YZF-R7_lemma.html"><img class="index_link" src="../Motostore_res/YZF-R7.png"></a></td>
+            </tr>
+        </table>
+               
             <a class="basement" title="github.com" href="https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a></td>       
 
     </body>
