upd: css improve

--- a/Motostore/1-Layout_html/Store-main.html
+++ b/Motostore/1-Layout_html/Store-main.html
@@ -7,7 +7,7 @@
         <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-main.css">-->
     </head>
     <body>
-        <img class="bg" src="../Motostore_res/index_bg.png">-->
+        <img class="bg" src="../Motostore_res/index_bg.jpg">-->
         <div class="head1">             <!-- head_fixed -->
             <img class="menu" src = "../Motostore_res/menu.png">
             <img class="logo_img" src = "../Motostore_res/logo.png">
@@ -15,14 +15,20 @@
             <a href="Empty_contact.html"><img class="call" src="../Motostore_res/Call_def.png"></a>
         </div>
         <table align="center">
-            <tr>
-                <td height = "800px" align="center"><a href="MT-03_lemma.html"><img class="index_link" src="../Motostore_res/MT-03.png"></a></td>
+            <tr align="center">
+                <td height = "800px"><a href="MT-03_lemma.html">
+                    <img class="index_link_text" src="../Motostore_res/MT-03_text.png">
+                    <img class="index_link" src="../Motostore_res/MT-03.png"></a></td>
             </tr>
             <tr>
-                <td height = "800px" align="center"><a href="MT-09_lemma.html"><img class="index_link" src="../Motostore_res/MT-09.png"></a></td>
+                <td height = "800px" align="center"><a href="MT-09_lemma.html">
+                    <img class="index_link_text" src="../Motostore_res/MT-09_text.png">
+                    <img class="index_link" src="../Motostore_res/MT-09.png"></a></td>
             </tr>
             <tr>
-                <td height = "800px" align="center"><a href="YZF-R7_lemma.html"><img class="index_link" src="../Motostore_res/YZF-R7.png"></a></td>
+                <td height = "800px" align="center"><a href="YZF-R7_lemma.html">
+                    <img class="index_link_text" src="../Motostore_res/YZF-R7_text.png">
+                    <img class="index_link" src="../Motostore_res/YZF-R7.png"></a></td>
             </tr>
         </table>
                
