add css for lemma

--- a/Motostore/1-Layout_html/Store-main.html
+++ b/Motostore/1-Layout_html/Store-main.html
@@ -15,24 +15,24 @@
             <a href="Empty_contact.html"><img class="call" src="../Motostore_res/Call_def.png"></a>
         </div>
         <table align="center">
-            <tr align="center">
-                <td height = "800px"><a href="MT-03_lemma.html">
+            <tr>
+                <td height = "1000px"><a href="MT-03_lemma.html">
                     <img class="index_link_text" src="../Motostore_res/MT-03_text.png">
                     <img class="index_link" src="../Motostore_res/MT-03.png"></a></td>
             </tr>
             <tr>
-                <td height = "800px" align="center"><a href="MT-09_lemma.html">
+                <td height = "1000px" align="center"><a href="MT-09_lemma.html">
                     <img class="index_link_text" src="../Motostore_res/MT-09_text.png">
                     <img class="index_link" src="../Motostore_res/MT-09.png"></a></td>
             </tr>
             <tr>
-                <td height = "800px" align="center"><a href="YZF-R7_lemma.html">
+                <td height = "1000px" align="center"><a href="YZF-R7_lemma.html">
                     <img class="index_link_text" src="../Motostore_res/YZF-R7_text.png">
                     <img class="index_link" src="../Motostore_res/YZF-R7.png"></a></td>
             </tr>
         </table>
-               
-            <a class="basement" title="github.com" href="https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a></td>       
-
+        <div>
+            <a class="basement" title="github.com" href="https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a>
+        </div>
     </body>
 </html>
