--- a/Motostore/1-Layout_html/MT-03_lemma.html
+++ b/Motostore/1-Layout_html/MT-03_lemma.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href ="../Motostore_res/logo.ico">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <link rel="icon" type="image/x-icon" href ="../Motostore_res/logo.ico">
         <title>Motorsore</title>
-</head>
-<body link= "#555" vlink="#555" alink="#fff" background = "../Motostore_res/MT-03_det.png">
-    <table width = "1500" align = "center">
-        <tr bgcolor = "#000">
-            <td width = "600"><img height = "80" class = "menu" src = "../Motostore_res/menu.png"></td>
-            <td width = "70"><img height = "70" width = "70" class = "logo_img" src = "../Motostore_res/logo.png"></td>
-            <td><h1><font color = "white" class = "logo_text">MOTORSTORE</font></h1></td>
-            <td><a class = "call" href = "Store-main.html"><font size = "4">BACK</font></a></td>
-        </tr>
-    </table>
-    <p align = "center"><img height = "90" src = "../Motostore_res/MT-03_text.png"></p>
+        <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-main.css">
+        <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-lemma_MT-03.css">
+    </head>
+    <body>
+        <img class="bg_lemma" src="../Motostore_res/MT-03_det.png">
+        <div class="head1">             <!-- head_fixed -->
+            <img class="menu" src = "../Motostore_res/menu.png">
+            <img class="logo_img" src = "../Motostore_res/logo.png">
+            <font class="logo_text">MOTORSTORE</font>
+            <a href="Empty_contact.html"><img class="call" src="../Motostore_res/Call_def.png"></a>
+        </div>
+    <img class="text_title" height = "90" src = "../Motostore_res/MT-03_text.png">
     <table align = "left" width = "1510">
         <tr>
             <td align="center"><img height="500" src="../Motostore_res/MT-03.png"></td>
@@ -26,9 +27,9 @@
                 <br><a href = "MT-03_contact.html"><img height = "120" src = "../Motostore_res/MT-03_contact_link.png"></a>
                 </td>
         </tr>
-        <tr height = "30" align = "center">
-            <td  colspan = "2"><a class = "basement" title = "github.com" href = "https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a></td>
-        </tr>
     </table>
+        <div>
+            <a class="basement" title="github.com" href="https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a>
+        </div>
 </body>
 </html>
