--- a/Motostore/1-Layout_html/Empty_contact.html
+++ b/Motostore/1-Layout_html/Empty_contact.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href ="../Motostore_res/logo.ico">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <link rel="icon" type="image/x-icon" href ="../Motostore_res/logo.ico">
         <title>Motorsore</title>
-</head>
-<body link= "#fff" vlink="#fff" alink="#555" scroll = "no" background = "../Motostore_res/Empty_contact_low.jpg">
-    <table width = "1500" align = "center">
-        <tr bgcolor = "#000">
-            <td width = "600"><img height = "80" class = "menu" src = "../Motostore_res/menu.png"></td>
-            <td width = "70"><img height = "70" width = "70" class = "logo_img" src = "../Motostore_res/logo.png"></td>
-            <td><h1><font color = "white" class = "logo_text">MOTORSTORE</font></h1></td>
-            <td><a class = "call" href = "Store-main.html"><font size = "4">BACK</font></a></td>
-        </tr>
+        <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-main.css">
+        <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-lemma.css">
+    </head>
+    <body>
+        <img class="bg_lemma" src="../Motostore_res/Empty_contact.jpg">
+        <div class="head1">             <!-- head_fixed -->
+            <img class="menu" src = "../Motostore_res/menu.png">
+            <img class="logo_img" src = "../Motostore_res/logo.png">
+            <font class="logo_text">MOTORSTORE</font>
+            <a href="Store-main.html"><img class="call" src="../Motostore_res/Back_def.png"></a>
+        </div>
         <tr>
             <td align="center"><br><font size = "7" color = "#fff"><b>We will contact you <br>shortly!</b></font></td>
-            <td colspan = "3" valign = "center" align = "center"><br><br><img height = "500" src = "../Motostore_res/contact_form_SAMPLE.png"></td>
-        </tr>
-        <tr align = "center">
-            <td  colspan = "4"><br><br><a class = "basement" title = "github.com" href = "https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a></td>
-        </tr>
-    </table>
+            <img height = "500" src = "../Motostore_res/contact_form_SAMPLE.png">
+            <a class = "basement" title = "github.com" href = "https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a>
 </body>
 </html>
