--- a/Motostore/1-Layout_html/MT-03_lemma.html
+++ b/Motostore/1-Layout_html/MT-03_lemma.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/x-icon" href ="../Motostore_res/logo.ico">
         <title>Motorsore</title>
         <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-main.css">
-        <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-lemma_MT-03.css">
+        <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-lemma.css">
     </head>
     <body>
         <img class="bg_lemma" src="../Motostore_res/MT-03_det.png">
@@ -13,23 +13,17 @@
             <img class="menu" src = "../Motostore_res/menu.png">
             <img class="logo_img" src = "../Motostore_res/logo.png">
             <font class="logo_text">MOTORSTORE</font>
-            <a href="Empty_contact.html"><img class="call" src="../Motostore_res/Call_def.png"></a>
+            <a href="Store-main.html"><img class="call" src="../Motostore_res/Back_def.png"></a>
         </div>
-    <img class="text_title" height = "90" src = "../Motostore_res/MT-03_text.png">
-    <table align = "left" width = "1510">
-        <tr>
-            <td align="center"><img height="500" src="../Motostore_res/MT-03.png"></td>
-            <td><h2><font color = "#7BCCCD">THE DARK BECKONS</font></h2>
-                <em><p><font size = "5px" color = "white">Your entry to the Dark Side.
-                <p>Built to thrill with a twin‑cylinder engine,
-                <p>aggressive looks and serious street presence.</em>
-                <br>
-                <br><a href = "MT-03_contact.html"><img height = "120" src = "../Motostore_res/MT-03_contact_link.png"></a>
-                </td>
-        </tr>
-    </table>
-        <div>
-            <a class="basement" title="github.com" href="https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a>
+        <img class="text_title" height = "90" src = "../Motostore_res/MT-03_text.png">
+        <div class="moto_img"><img height="500" src="../Motostore_res/MT-03.png"></div>
+        <div class="descr_title">THE DARK BECKONS</div>
+        <div class="descr">
+            Your entry to the Dark Side.
+            Built to thrill with a twin‑cylinder engine,
+            aggressive looks and serious street presence.
         </div>
+        <a class="link_contact" href = "MT-03_contact.html"><img height = "120" src = "../Motostore_res/MT-03_contact_link.png"></a>
+        <a class="basement" title="github.com" href="https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a>
 </body>
 </html>
