--- a/Motostore/1-Layout_html/Store-main.html
+++ b/Motostore/1-Layout_html/Store-main.html
@@ -21,12 +21,12 @@
                     <img class="index_link" src="../Motostore_res/MT-03.png"></a></td>
             </tr>
             <tr>
-                <td height = "1000px" align="center"><a href="MT-09_lemma.html">
+                <td height = "1000px"><a href="MT-09_lemma.html">
                     <img class="index_link_text" src="../Motostore_res/MT-09_text.png">
                     <img class="index_link" src="../Motostore_res/MT-09.png"></a></td>
             </tr>
             <tr>
-                <td height = "1000px" align="center"><a href="YZF-R7_lemma.html">
+                <td height = "1000px"><a href="YZF-R7_lemma.html">
                     <img class="index_link_text" src="../Motostore_res/YZF-R7_text.png">
                     <img class="index_link" src="../Motostore_res/YZF-R7.png"></a></td>
             </tr>
