UPD to vw/vh, contact_empty

--- a/Motostore/1-Layout_html/Empty_contact.html
+++ b/Motostore/1-Layout_html/Empty_contact.html
@@ -6,6 +6,7 @@
         <title>Motorsore</title>
         <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-main.css">
         <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-lemma.css">
+        <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-contact.css">
     </head>
     <body>
         <img class="bg_lemma" src="../Motostore_res/Empty_contact.jpg">
@@ -15,9 +16,8 @@
             <font class="logo_text">MOTORSTORE</font>
             <a href="Store-main.html"><img class="call" src="../Motostore_res/Back_def.png"></a>
         </div>
-        <tr>
-            <td align="center"><br><font size = "7" color = "#fff"><b>We will contact you <br>shortly!</b></font></td>
-            <img height = "500" src = "../Motostore_res/contact_form_SAMPLE.png">
+            <div class="title_contact">We will contact <br> you shortly!</div>
+            <img class="contact_form" src = "../Motostore_res/contact_form_SAMPLE.png">
             <a class = "basement" title = "github.com" href = "https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a>
 </body>
 </html>
