--- a/Motostore/1-Layout_html/Store-main.html
+++ b/Motostore/1-Layout_html/Store-main.html
@@ -4,10 +4,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" type="image/x-icon" href ="../Motostore_res/logo.ico">
         <title>Motorsore</title>
-        <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-main.css">-->
+        <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-main.css">
     </head>
     <body>
-        <img class="bg" src="../Motostore_res/index_bg.jpg">-->
+        <img class="bg" src="../Motostore_res/index_bg.jpg">
         <div class="head1">             <!-- head_fixed -->
             <img class="menu" src = "../Motostore_res/menu.png">
             <img class="logo_img" src = "../Motostore_res/logo.png">
