UPD add bg_contact

--- a/Motostore/1-Layout_html/Empty_contact.html
+++ b/Motostore/1-Layout_html/Empty_contact.html
@@ -9,7 +9,7 @@
         <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-contact.css">
     </head>
     <body>
-        <img class="bg_lemma" src="../Motostore_res/Empty_contact.jpg">
+        <img class="bg_contact" src="../Motostore_res/Empty_contact.jpg">
         <div class="head1">             <!-- head_fixed -->
             <img class="menu" src = "../Motostore_res/menu.png">
             <img class="logo_img" src = "../Motostore_res/logo.png">
