--- a/Motostore/1-Layout_html/Empty_contact.html
+++ b/Motostore/1-Layout_html/Empty_contact.html
@@ -16,7 +16,7 @@
             <font class="logo_text">MOTORSTORE</font>
             <a href="Store-main.html"><img class="call" src="../Motostore_res/Back_def.png"></a>
         </div>
-            <div class="title_contact">We will contact <br> you shortly!</div>
+            <div class="title_contact" style="top: 16vw;">We will contact <br> you shortly!</div>
             <img class="contact_form" src = "../Motostore_res/contact_form_SAMPLE.png">
             <a class = "basement" title = "github.com" href = "https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a>
 </body>
