--- a/Motostore/1-Layout_html/MT-03_lemma.html
+++ b/Motostore/1-Layout_html/MT-03_lemma.html
@@ -17,10 +17,10 @@
         </div>
         <img class="text_title" height = "90" src = "../Motostore_res/MT-03_text.png">
         <div class="moto_img"><img height="500" src="../Motostore_res/MT-03.png"></div>
-        <div class="descr_title">THE DARK BECKONS</div>
-        <div class="descr">
+        <div class="descr_title" style="left: 53vw; top: 14vw; color: #7BCCCD; text-shadow: 0px 2px 3px #7BCCCD;">THE DARK BECKONS</div>
+        <div class="descr" style="top: 22vw; font-size: 30px;">
             Your entry to the Dark Side.
-            Built to thrill with a twin‑cylinder engine,
+            Built to thrill with a twin-cylinder engine,
             aggressive looks and serious street presence.
         </div>
         <a class="link_contact" href = "MT-03_contact.html"><img height = "120" src = "../Motostore_res/MT-03_contact_link.png"></a>
