--- a/Motostore/1-Layout_html/MT-09_lemma.html
+++ b/Motostore/1-Layout_html/MT-09_lemma.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href ="../Motostore_res/logo.ico">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <link rel="icon" type="image/x-icon" href ="../Motostore_res/logo.ico">
         <title>Motorsore</title>
-</head>
-<body link= "#555" vlink="#555" alink="#fff" background = "../Motostore_res/MT-09_det.jpg">
-    <table width = "1500" align = "center">
-        <tr bgcolor = "#000">
-            <td width = "600"><img height = "80" class = "menu" src = "../Motostore_res/menu.png"></td>
-            <td width = "70"><img height = "70" width = "70" class = "logo_img" src = "../Motostore_res/logo.png"></td>
-            <td><h1><font color = "white" class = "logo_text">MOTORSTORE</font></h1></td>
-            <td><a class = "call" href = "Store-main.html"><font size = "4">BACK</font></a></td>
-        </tr>
-    </table>
-    <p align = "center"><img height = "90" src = "../Motostore_res/MT-09_text.png"></p>
-    <table align = "left" width = "1510">
-        <tr>
-            <td align="center"><img height="500" src="../Motostore_res/MT-09.png"></td>
-            <td><h2><font color = "#0D19A0">CHALLENGE THE DARKNESS</font></h2>
-                <em><p><font size = "5px" color = "white">Your entry to the Dark Side.
-                <p>Built to thrill with a twin‑cylinder engine,
-                <p>aggressive looks and serious street presence.</em>
-                <br>
-                <br><a href = "MT-09_contact.html"><img height = "120" src = "../Motostore_res/MT-09_contact_link.png"></a>
-                </td>
-        </tr>
-        <tr height = "30" align = "center">
-            <td  colspan = "2"><a class = "basement" title = "github.com" href = "https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a></td>
-        </tr>
-    </table>
+        <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-main.css">
+        <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-lemma.css">
+    </head>
+    <body>
+        <img class="bg_lemma" src="../Motostore_res/MT-09_det.jpg">
+        <div class="head1">             <!-- head_fixed -->
+            <img class="menu" src = "../Motostore_res/menu.png">
+            <img class="logo_img" src = "../Motostore_res/logo.png">
+            <font class="logo_text">MOTORSTORE</font>
+            <a href="Store-main.html"><img class="call" src="../Motostore_res/Back_def.png"></a>
+        </div>
+        <img class="text_title" height = "90" src = "../Motostore_res/MT-09_text.png">
+        <div class="moto_img"><img height="500" src="../Motostore_res/MT-09.png"></div>
+        <div class="descr_title" style="left: 45vw; top: 14vw; color: #0D19A0; text-shadow: 0px 4px 4px #0F1873;">CHALLENGE THE DARKNESS</div>
+        <div class="descr" style="top: 24vw; font-size: 23px; ">
+            Featuring exclusive, special edition coloring, 
+            premium KYB® and Öhlins® suspension and a 
+            cruise control system,
+            experience the class-dominating middleweight 
+            masterpiece born from the Darkness.
+        </div>
+        <a class="link_contact" href = "MT-09_contact.html"><img height = "120" src = "../Motostore_res/MT-09_contact_link.png"></a>
+        <a class="basement" title="github.com" href="https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a>
 </body>
 </html>
