animation link text

--- a/Motostore/1-Layout_html/Store-main.html
+++ b/Motostore/1-Layout_html/Store-main.html
@@ -17,17 +17,17 @@
         <table align="center">
             <tr>
                 <td height = "1000px"><a href="MT-03_lemma.html">
-                    <img class="index_link_text" src="../Motostore_res/MT-03_text.png">
+                    <div class="index_link_text"><img class="index_link_text" src="../Motostore_res/MT-03_text.png"></div>
                     <img class="index_link" src="../Motostore_res/MT-03.png"></a></td>
             </tr>
             <tr>
                 <td height = "1000px"><a href="MT-09_lemma.html">
-                    <img class="index_link_text" src="../Motostore_res/MT-09_text.png">
+                    <div class="index_link_text"><img class="index_link_text" src="../Motostore_res/MT-09_text.png"></div>
                     <img class="index_link" src="../Motostore_res/MT-09.png"></a></td>
             </tr>
             <tr>
                 <td height = "1000px"><a href="YZF-R7_lemma.html">
-                    <img class="index_link_text" src="../Motostore_res/YZF-R7_text.png">
+                    <div class="index_link_text"><img class="index_link_text" src="../Motostore_res/YZF-R7_text.png"></div>
                     <img class="index_link" src="../Motostore_res/YZF-R7.png"></a></td>
             </tr>
         </table>
