--- a/Motostore/1-Layout_html/Empty_contact.html
+++ b/Motostore/1-Layout_html/Empty_contact.html
@@ -9,7 +9,9 @@
         <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-contact.css">
     </head>
     <body>
-        <img class="bg_contact" src="../Motostore_res/Empty_contact.jpg">
+        <video class="bg_contact" preload="auto" playsinline autoplay muted loop>
+            <source src="../Motostore_res/Promo Video_YZF - R3.mp4">
+        </video>
         <div class="head1">             <!-- head_fixed -->
             <img class="menu" src = "../Motostore_res/menu.png">
             <img class="logo_img" src = "../Motostore_res/logo.png">
