--- a/Motostore/1-Layout_html/MT-03_lemma.html
+++ b/Motostore/1-Layout_html/MT-03_lemma.html
@@ -23,7 +23,7 @@
             Built to thrill with a twin-cylinder engine,
             aggressive looks and serious street presence.
         </div>
-        <a class="link_contact" href = "MT-03_contact.html"><img height = "120" src = "../Motostore_res/MT-03_contact_link.png"></a>
+        <div class="link_contact MT-03"><a href = "MT-03_contact.html"><font class="text_contact MT-03">HAVE A DEALER CONTACT ME</a></font></div>
         <a class="basement" title="github.com" href="https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a>
 </body>
 </html>
