--- a/Motostore/1-Layout_html/MT-09_lemma.html
+++ b/Motostore/1-Layout_html/MT-09_lemma.html
@@ -25,7 +25,7 @@
             experience the class-dominating middleweight 
             masterpiece born from the Darkness.
         </div>
-        <a class="link_contact" href = "MT-09_contact.html"><img height = "120" src = "../Motostore_res/MT-09_contact_link.png"></a>
+        <div class="link_contact MT-09"><a href = "MT-09_contact.html"><font class="text_contact MT-09">HAVE A DEALER CONTACT ME</a></font></div>
         <a class="basement" title="github.com" href="https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a>
 </body>
 </html>
