--- a/Motostore/1-Layout_html/Store-main.html
+++ b/Motostore/1-Layout_html/Store-main.html
@@ -7,6 +7,7 @@
         <link rel = "stylesheet" content = "text/css" href="../2-Styles_css/Style-main.css">
     </head>
     <body>
+        
         <img class="bg" src="../Motostore_res/index_bg.jpg">
         <div class="head1">             <!-- head_fixed -->
             <img class="menu" src = "../Motostore_res/menu.png">
@@ -31,8 +32,12 @@
                     <img class="index_link" src="../Motostore_res/YZF-R7.png"></a></td>
             </tr>
         </table>
+        <audio class="audio" preload="auto" autoplay loop controls>
+            <source src="../Motostore_res/Daft Punk - End Of Line.mp3">
+        </audio>
         <div>
             <a class="basement" title="github.com" href="https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a>
         </div>
+        
     </body>
 </html>
