--- a/Motostore/1-Layout_html/YZF-R7_lemma.html
+++ b/Motostore/1-Layout_html/YZF-R7_lemma.html
@@ -25,7 +25,8 @@
             the World GP 60th Anniversary Edition YZF-R7 
             is striking from every angle.
         </div>
-        <a class="link_contact" href = "YZF-R7_contact.html"><img height = "120" src = "../Motostore_res/YZF-R7_contact_link.png"></a>
+        <div class="link_contact YZF-R7"><a href = "YZF-R7_contact.html"><font class="text_contact YZF-R7">HAVE A DEALER CONTACT ME</a></font></div>
+
         <a class="basement" title="github.com" href="https://github.com/Noixd">Desinged by Осипенко Данила (ЭТ-21)</a>
 </body>
 </html>
